--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anjanak05.github.io",
   "version": "0.1.0",
-  "homepage": "https://anjanak05.github.io/react-gh-pages",
+  "homepage": "https://anjanak05.github.io",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.9.0",
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "locomotive-scroll": "^4.1.4",
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
@@ -18,11 +19,11 @@
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^4.0.0"
+    "web-vitals": "^2.1.4"
   },
-  "scripts": {"predeploy": "npm run build",
-     "deploy": "gh-pages -d build",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
